sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:6: error: type mismatch;
 found   : Unit
 required: Int
  for (i <- N to getNombreValeurs()-2) {
         ^