sort.basic.selection.AlgSelectionSort.scala.code
def rechercheMin(N: Int): Int = {
  
  var indMin = N
  
  for (i <- N to getNombreValeurs()-2) {
    
    if (plusPetit(i,i+1)) {
      
      indMin = i
      
    }
    
    else {
      
      indMin = i+1
      
    }
    
  }
  
}


def selectionSort() {
  
  for (i <- 0 to getNombreValeurs()-2) {
    
    echange(i,rechercheMin(i))
    
  }
  
}